--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Agora West 14</title>
   </head>
   <body>
-    <p>hello</p>
+    <header>
+      <p>Best-Selling Author and Gold Expert</p>
+      <p>Jim Rickards presents ...</p>
+    </header>
+    <div class="top-Section">
+      <h1>"In just days a Never-Before-Seen Gold Anomaly Will Create a Totally New Class of Penny Gold Stocks...</h1>
+      <h1>I've Enlisted One of the World's Top Geologists to Help Me Reveal .. . Live on Camera...What This Coming Gold Mega-Catalyst Is And How You Can Make as Much as $101,000 in Profit."</h1>
+      <p>I would love to recieve a free news letter</p>
+    </div>
+    <div class="firstButton">
+      <button class="webinarButton" type="button" name="button">Register for this FREE live Webinar Here! </button>
+      <section class="mid-Section">
+
+    </div>
+    <script src="assets/main.js" charset="utf-8"></script>
 
   </body>
 </html>
