--- a/index.html
+++ b/index.html
@@ -14,13 +14,31 @@
     <div class="top-Section">
       <h1>"In just days a Never-Before-Seen Gold Anomaly Will Create a Totally New Class of Penny Gold Stocks...</h1>
       <h1>I've Enlisted One of the World's Top Geologists to Help Me Reveal .. . Live on Camera...What This Coming Gold Mega-Catalyst Is And How You Can Make as Much as $101,000 in Profit."</h1>
-      <p>I would love to recieve a free news letter</p>
+      <label class="checkbox-container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark">I would love to recieve a free news letter</span>
+      </label>
     </div>
     <div class="firstButton">
       <button class="webinarButton" type="button" name="button">Register for this FREE live Webinar Here! </button>
-      <section class="mid-Section">
-
     </div>
+    <section class="first-Midsection">
+      <div class="one-box">
+        <img src="images/RGS_Calendar.png" alt="calender pic">
+        <h2>May 29th</h2>
+        <p>at 5pm EDT</p>
+      </div>
+      <div class="two-box">
+        <h2>TIME LEFT UNTIL THE WEBINAR STARTS...</h2>
+      </div>
+    </section>
+    <section class="second-Midsection">
+
+    </section>
+    <section class="third-Midsection">
+
+    </section>
+
     <script src="assets/main.js" charset="utf-8"></script>
 
   </body>
