middle section images

--- a/index.html
+++ b/index.html
@@ -33,8 +33,34 @@
       </div>
     </section>
     <section class="second-Midsection">
-
+      <div class="three-box">
+        <img src="images/JimRickards.png" alt="Jim's picture">
+      </div>
+      <div class="four-box">
+        <h3>I'm going to show you ..</h3>
+        <li>
+          <ul>
+            <p>How a class of “off-limit” gold stocks could become fair game and shoot up in price…</p>
+          </ul>
+          <ul>
+            <p>How a class of “off-limit” gold stocks could become fair game and shoot up in price…</p>
+          </ul>
+          <u>
+            <p>Why just as many gold stocks could be CRUSHED. But this isn’t a bad thing. In fact, it’s going to open up a unique opportunity not seen in years…</p>
+          </u>
+          <u>
+            <p>How it could compound an announcement from the Federal Reserve next week that could send physical gold prices much higher…</p>
+          </u>
+          <u>
+            <p>Why you’ll hear predictions of doom for the gold market (it’s important you understand the truth and know the real profit opportunity that’s being set up)...</p>
+          </u>
+          <u>
+            <p>Why we may see confirmation that gold will make a run at $2,000 sooner than anyone thinks...</p>
+          </u>
+        </li>
+      </div>
     </section>
+    
     <section class="third-Midsection">
 
     </section>
