more style and css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="assets/style.css">
     <title>Agora West 14</title>
@@ -13,7 +14,7 @@
     </header>
     <div class="top-Section">
       <h1>"In just days a Never-Before-Seen Gold Anomaly Will Create a Totally New Class of Penny Gold Stocks...</h1>
-      <h1>I've Enlisted One of the World's Top Geologists to Help Me Reveal .. . Live on Camera...What This Coming Gold Mega-Catalyst Is And How You Can Make as Much as $101,000 in Profit."</h1>
+      <h1>I've Enlisted One of the World's Top Geologists to Help Me Reveal .. . Live on Camera...What This Coming <a href="#">Gold Mega-Catalyst</a> Is And How You Can Make as Much as <a href="#">$101,000 in Profit</a>."</h1>
       <label class="checkbox-container">
         <input type="checkbox" checked="checked">
         <span class="checkmark">I would love to recieve a free news letter</span>
@@ -24,7 +25,7 @@
     </div>
     <section class="first-Midsection">
       <div class="one-box">
-        <img src="images/RGS_Calendar.png" alt="calender pic">
+        <img id="calendarPic" src="images/RGS_Calendar.png" alt="calender pic">
         <h2>May 29th</h2>
         <p>at 5pm EDT</p>
       </div>
@@ -35,6 +36,8 @@
     <section class="second-Midsection">
       <div class="three-box">
         <img src="images/JimRickards.png" alt="Jim's picture">
+        <p>Presented by best-selling author and gold expert</p>
+        <h2>…JAMES G. RICKARDS</h2>
       </div>
       <div class="four-box">
         <h3>I'm going to show you ..</h3>
@@ -60,10 +63,29 @@
         </li>
       </div>
     </section>
-    
-    <section class="third-Midsection">
 
-    </section>
+    <footer>
+      <div class="pinkSection">
+        <img id="warningSymbol" src="images/Warning.png" alt="warning symbol">
+        <h2>WARNING: SPACE IS LIMITED & THESE LIVE TRAININGS ALWAYS FILL UP</h2>
+      </div>
+      <div class="blueSection">
+        <p>Claim your spot below before it's too late!</p>
+      </div>
+      <div class="arrowDown">
+
+      </div>
+      <div class="bottomSection">
+        <label class="checkbox-container">
+          <input type="checkbox" checked="checked">
+          <span class="checkmark">I would love to recieve a free news letter</span>
+        </label>
+        <button  class="bottomButton" type="button" name="button">YES! Reserve My Spot Now! >>
+        </button>
+
+      </div>
+    </footer>
+
 
     <script src="assets/main.js" charset="utf-8"></script>
 
