html css, time to begin responsiveness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-Section">
       <h1>"In just days a Never-Before-Seen Gold Anomaly Will Create a Totally New Class of Penny Gold Stocks...</h1>
       <h1>I've Enlisted One of the World's Top Geologists to Help Me Reveal .. . Live on Camera...What This Coming <a href="#">Gold Mega-Catalyst</a> Is And How You Can Make as Much as <a href="#">$101,000 in Profit</a>."</h1>
-      <label class="checkbox-container">
+      <label class="checkbox-container1">
         <input type="checkbox" checked="checked">
         <span class="checkmark">I would love to recieve a free news letter</span>
       </label>
@@ -27,7 +27,7 @@
       <div class="one-box">
         <img id="calendarPic" src="images/RGS_Calendar.png" alt="calender pic">
         <h2>May 29th</h2>
-        <p>at 5pm EDT</p>
+        <p>at 5:00 PM EDT</p>
       </div>
       <div class="two-box">
         <h2>TIME LEFT UNTIL THE WEBINAR STARTS...</h2>
@@ -36,31 +36,31 @@
     <section class="second-Midsection">
       <div class="three-box">
         <img src="images/JimRickards.png" alt="Jim's picture">
-        <p>Presented by best-selling author and gold expert</p>
-        <h2>…JAMES G. RICKARDS</h2>
+        <p>Presented by best-selling author and gold expert…</p>
+        <h2>JAMES G. RICKARDS</h2>
       </div>
       <div class="four-box">
         <h3>I'm going to show you ..</h3>
-        <li>
-          <ul>
+        <ul class="list-ul">
+          <li>
             <p>How a class of “off-limit” gold stocks could become fair game and shoot up in price…</p>
-          </ul>
-          <ul>
+          </li>
+          <li>
             <p>How a class of “off-limit” gold stocks could become fair game and shoot up in price…</p>
-          </ul>
-          <u>
+          </li>
+          <li>
             <p>Why just as many gold stocks could be CRUSHED. But this isn’t a bad thing. In fact, it’s going to open up a unique opportunity not seen in years…</p>
-          </u>
-          <u>
+          </li>
+          <li>
             <p>How it could compound an announcement from the Federal Reserve next week that could send physical gold prices much higher…</p>
-          </u>
-          <u>
+          </li>
+          <li>
             <p>Why you’ll hear predictions of doom for the gold market (it’s important you understand the truth and know the real profit opportunity that’s being set up)...</p>
-          </u>
-          <u>
+          </li>
+          <li>
             <p>Why we may see confirmation that gold will make a run at $2,000 sooner than anyone thinks...</p>
-          </u>
-        </li>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -76,7 +76,7 @@
 
       </div>
       <div class="bottomSection">
-        <label class="checkbox-container">
+        <label class="checkbox-container2">
           <input type="checkbox" checked="checked">
           <span class="checkmark">I would love to recieve a free news letter</span>
         </label>
