--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </label>
         <button onclick="gotoAPI()" class="bottomButton" type="button" name="button">YES! Reserve My Spot Now! >>
         </button>
+        <p id="somePTag"></p>
 
       </div>
     </footer>
